尝试把vue与beego初步结合，已经OK了，autorender需要设置为true

--- a/conf/app.conf
+++ b/conf/app.conf
@@ -1,7 +1,7 @@
 appname = GoMessage
 httpport = 8080
 runmode = prod
-autorender = false
+autorender = true
 copyrequestbody = true
 EnableDocs = true
 sqlconn = 
