--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,6 @@ env
 *.tar.gz
 lastupdate.tmp
 routers/commentsRouter_controllers.go
+routers/commentsRouter______________________Users_tay_go_src_GoMessage_controllers.go
+
+
