模板提交功能OK

--- a/.gitignore
+++ b/.gitignore
@@ -16,5 +16,5 @@ build
 lastupdate.tmp
 routers/commentsRouter_controllers.go
 routers/commentsRouter______________________Users_tay_go_src_GoMessage_controllers.go
-
+GoMessage
 
