修复前端页面上的BUG

--- a/conf/app.conf
+++ b/conf/app.conf
@@ -1,8 +1,14 @@
+#应用名称
 appname = GoMessage
-httpport = 7077
+#监听地址
 httpaddr = 0.0.0.0
+#监听端口
+httpport = 7077
+#运行环境
 runmode = dev
+#是否自动渲染静态文件
 autorender = true
+#是否返回给请求端原始数据
 copyrequestbody = true
+#是否自动加载api文档
 EnableDocs = true
-sqlconn = 
