--- a/.gitignore
+++ b/.gitignore
@@ -17,4 +17,5 @@ lastupdate.tmp
 routers/commentsRouter_controllers.go
 routers/commentsRouter______________________Users_tay_go_src_GoMessage_controllers.go
 GoMessage
+*prof
 
