--- a/conf/app.conf
+++ b/conf/app.conf
@@ -12,3 +12,9 @@ autorender = true
 copyrequestbody = true
 #是否自动加载api文档
 EnableDocs = true
+#是否开启进程内监控
+EnableAdmin = false
+#监控地址
+AdminAddr = "localhost"
+#监控端口
+AdminPort = 8088
