更换为Gin框架

--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,30 @@
-##########################
-# Git提交时屏蔽以下文件
-##########################
+### gitignore template
+
+.idea
+vue2/.idea
+*.iml
+*.log
+*.db
+./config/*.db
+*.sqlite
+*.sqlite3
+out
+gen
+tmp_logs
+tmp
+logs
+gomessage
+gomessage.db
+/RunGoMessage
+/gomessageDeBug
+/gomessageDebug
+/gomessageRun
+/gomessageRunBuild
 venv
 env
 build
-
 .venv
 .env
-.idea
-*.iml
-
-*.log
-*.sqlite3
 *.tar.gz
 lastupdate.tmp
 routers/commentsRouter_controllers.go
