--- a/.air.toml
+++ b/.air.toml
@@ -7,8 +7,8 @@ tmp_dir = "tmp"
   bin = "./tmp/main"
   cmd = "go build -o ./tmp/main ."
   delay = 1000
-  exclude_dir = ["assets", "tmp", "vendor", "testdata", "docs"]
-  exclude_file = []
+exclude_dir = ["assets", "tmp", "vendor", "testdata", "docs", "logs", "wiki"]
+exclude_file = []
   exclude_regex = ["_test.go"]
   exclude_unchanged = false
   follow_symlink = false
