--- a/.gitignore
+++ b/.gitignore
@@ -30,4 +30,5 @@ routers/commentsRouter_controllers.go
 routers/commentsRouter______________________Users_tay_go_src_GoMessage_controllers.go
 GoMessage
 *prof
+.DS_Store
 
