--- a/config/default.yaml
+++ b/config/default.yaml
@@ -9,11 +9,11 @@ global:
 
 
 #--------------------
-# 启动地址和端口
+# 启动地址和端口（这里的配置暂时不用了，把监听地址直接写死到了代码中：0.0.0.0:7077）
 #--------------------
-server:
-  host: 127.0.0.1
-  port: 7077
+#server:
+#  host: 0.0.0.0
+#  port: 7077
 
 
 #--------------------
