--- a/config/default.yaml
+++ b/config/default.yaml
@@ -20,9 +20,18 @@ global:
 # 日志配置
 #--------------------
 log:
-  level: info                   #（选项：debug、info）
-  format: text                  #（选项：json、text）
-  logFile: ./gomessage.log
+  level: info                                 #（选项：debug、info）
+  format: text                                #（选项：json、text）
+  runtimeLogFile: ./gomessage-runtime.log     # 该文件记录的基础日志
+  accessLogFile: ./gomessage-access.log       # 该文件记录的基础日志
+  logToEs: true                               # 这是一个开关，如果设定为true则日志会被送入es中，如果为false则什么也不做（索引格式：gomessage-runtime-2022.03.05、gomessage-access-2022.03.05）
+  es:                                         # 如果上面的开关 logToEs==false，则下面的信息不会被使用
+    username: "elastic"
+    password: "123456"
+    urls:
+      - "http://xxx.xxx.xxx:9200"
+      - "http://xxx.xxx.xxx:9200"
+      - "http://xxx.xxx.xxx:9200"
 
 
 #--------------------
