--- a/vue/package.json
+++ b/vue/package.json
@@ -8,6 +8,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@sentry/browser": "^7.46.0",
+    "@sentry/integrations": "^7.46.0",
     "core-js": "^3.6.5",
     "element-ui": "^2.4.5",
     "highlight.js": "^11.3.1",
