--- a/config/default.yaml
+++ b/config/default.yaml
@@ -47,7 +47,7 @@ databaseType: "sqlite3"
 # SQLite3 基本配置
 #--------------------
 sqlite3:
-  path: "./config/gomessage.db"
+  path: "./data/gomessage.db"
   MaxIdleConns: 10
   MaxOpenConns: 100
 
