--- a/config/default.yaml
+++ b/config/default.yaml
@@ -2,9 +2,7 @@
 # 全局配置
 #--------------------
 global:
-  appName: "GoMessage"           # 应用名称，可以随意修改，如果同一台机器上启动多个GoMessage服务，请不要让该名称冲突
-  appDescription: "消息转发器"     # 应用说明，可以随意修改
-  env: "dev"                      # 当前运行环境（这里是的第二优先级，如果启动时的命令行参数时没有指定--env=dev时，则这里的才会生效）
+  env: "dev"                      # 当前运行环境（这里是的第二优先级，如果启动时的命令行参数时没有指定--env参数，这里的才会生效）
   ginMode: "release"              # 运行模式（debug、test、release），如果不是二次开发该项目，则不用关注这个参数。
 
 
@@ -25,20 +23,20 @@ log:
   runtimeLogFile: ./gomessage-runtime.log     # 该文件记录"运行时"的日志
   accessLogFile: ./gomessage-access.log       # 该文件记录"access"的日志
   pushLogFile: ./gomessage-push.log           # 该文件记录"推送数据"的日志
-  log2es: false                               # （未完成）这是一个开关，如果设定为true则日志会被送入es中，如果为false则什么也不做（索引格式：gomessage-runtime-2022.03.05、gomessage-access-2022.03.05、gomessage-push-2022.03.05）
+  #这是一个开关，如果设定为true则会把日志也送入es中，如果为false则什么也不做（索引格式：gomessage-runtime-2022.03.05、gomessage-access-2022.03.05、gomessage-push-2022.03.05）
+  log2es: true                                # （仅支持Elasticsearch 7.x以上的版本）
   es:                                         # 如果 log2es==true 时，下面的es相关的信息才会生效。
-    username: "elastic"
-    password: "123456"
+    username: "elastic"                       # 如果您的es连接不需要账号密码，请把这里设置为""
+    password: "123456"                        # 如果您的es连接不需要账号密码，请把这里设置为""
     urls:
-      - "http://xxx.xxx.xxx:9200"
-      - "http://xxx.xxx.xxx:9200"
-      - "http://xxx.xxx.xxx:9200"
+      - "http://localhost:9200"
 
 
 #--------------------
 # 数据库类型选择: (sqlite3、mysql)
-# 如果该参数不能为空，官方默认推荐使用sqlite3，
-# 因为只存储gomessage的运行元数据，因此存储量很小，sqlite3 刚好满足要求
+# 作者推荐这里使用sqlite3，
+# 因为该数据库只存储gomessage运行时中的元数据，存储量很小 sqlite3 刚好满足要求
+# 其余的过境数据，GoMessage都会将其写入到Elasticsearch中，并不需要写入到数据库中
 #--------------------
 databaseType: "sqlite3"
 
@@ -54,14 +52,16 @@ sqlite3:
 
 #--------------------
 # Mysql 基本配置
+# 作者不推荐使用MySQL，不然会导致GoMessage变的很重，但源码中却已经实现了对MySQL的完整支持；
+# 如果您非要使用mysql，请取消下文中的注释，并修改上文中的配置为（databaseType: "mysql"）即可。
 #--------------------
-mysql:
-  host: "xxxxxxxxxxxxxxxxxxxxxxxxxxxxxx"
-  port: "3306"
-  name: "xxxxxxxxxx"
-  username: "xxxxxxxxxx"
-  password: "xxxxxxxxxx"
-  options: "charset=utf8mb4&parseTime=True&loc=Local"
+#mysql:
+#  host: "xxxxxxxxxxxxxxxxxxxxxxxxxxxxxx"
+#  port: "3306"
+#  name: "xxxxxxxxxx"
+#  username: "xxxxxxxxxx"
+#  password: "xxxxxxxxxx"
+#  options: "charset=utf8mb4&parseTime=True&loc=Local"
 
 
 
