--- a/docker/helm/templates/Service.yaml
+++ b/docker/helm/templates/Service.yaml
@@ -2,14 +2,16 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ .Chart.Name }}
+  name: {{ .Chart.Name }}-svc
+  namespace: default
   labels:
     app: {{ .Chart.Name }}
 spec:
-  type: NodePort
   selector:
     app: {{ .Chart.Name }}
+  type: NodePort
   ports:
     - port: {{ .Values.service.port }}
       targetPort: {{ .Values.service.targetPort }}
       name: {{ .Chart.Name }}
+      nodePort: 32077
