--- a/docker/helm/templates/deployment.yaml
+++ b/docker/helm/templates/deployment.yaml
@@ -6,7 +6,7 @@ metadata:
   labels:
     app: {{ .Chart.Name }}
 spec:
-  replicas: 2
+  replicas: {{ .Values.deployment.replicas }}
   selector:
     matchLabels:
       app: {{ .Chart.Name }}
