--- a/docker/helm/templates/pvc.yaml
+++ b/docker/helm/templates/pvc.yaml
@@ -3,6 +3,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: {{ .Chart.Name }}-pvc
+  namespace: {{ .Values.namespace }}
   labels:
     app: {{ .Chart.Name }}
 spec:
